# parse_args

./: .gitignore  AUTHORS.md  CMakeLists.txt  LICENSE  ParseArgsConfig.cmake.in  README.md  build.ps1  parseargs.pc.in
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE.md
.github/workflows/: linux.yml  macos.yml  windows.yml
cmake/vcpkg/ports/parseargs/: portfile.cmake  vcpkg.json
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in
example/: runtest.cpp
hpp/: parse_args.hpp  parse_args_old.hpp
include/: parse_args.h
src/: parse_args.cpp
testing/: runtest.sh
